--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,8 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/inter.css);
+
+@import url(./components/page/page.css);
+
+@import url(./components/Header/Header.css);
+
+@import url(./components/Main/Main.css);
