--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,16 @@
 
 @import url(./components/Header/Header.css);
 
-@import url(./components/Main/Main.css);
+@import url(./components/Promo/Promo.css);
+
+@import url(./components/NavTab/NavTab.css);
+
+@import url(./components/AboutProject/AboutProject.css);
+
+@import url(./components/Techs/Techs.css);
+
+@import url(./components/AboutMe/AboutMe.css);
+
+@import url(./components/Portfolio/Portfolio.css);
+
+@import url(./components/Footer/Footer.css);
