--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,10 @@
     height: 74px;
 }
 
+.header__movies {
+    background: #202020;
+}
+
 .header__logo {
     width: 38px;
     height: 38px;
@@ -14,9 +18,40 @@
 
 .header__nav {
     margin: 21px 70px 0 0;
+    display: flex;
+    justify-content: space-between;
+    width: 1058px;
 }
 
-.header__nav-signup {
+.header__links {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.header__button {
+    background: #3DDC84;
+    border-radius: 3px;
+    align-items: center;
+    width: 76px;
+    height: 32px;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
+.header__button:hover {
+    cursor: pointer;
+}
+
+.header__button-grey {
+    background: #313131;
+    border-radius: 20px;
+    width: 100px;
+}
+
+.header__nav-link {
     margin: 8px 30px 0 0;
     font-style: normal;
     font-weight: 500;
@@ -24,18 +59,22 @@
     line-height: 16px;
     color: #FFFFFF;
     text-decoration: none;
-
 }
 
-.header__nav-signin {
-    background: #3DDC84;
-    border-radius: 3px;
-    padding: 8px 20px;
+.header__nav-link-normal {
+    font-weight: normal
+}
+
+.header__nav-button {
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
-    align-items: center;
     text-decoration: none;
     color: #000000;
+}
+
+.header__nav-button-grey {
+    font-size: 14px;
+    color: #FFFFFF;
 }
