--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,17 @@
 .header {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     background: #073042;
     height: 74px;
+    width: 100%;
+    justify-content: center;
+}
+
+.header__content {
+    display: flex;
+    max-width: 1140px;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .header__movies {
@@ -13,13 +21,13 @@
 .header__logo {
     width: 38px;
     height: 38px;
-    margin: 18px 0 0 70px;
+    margin: 18px 0 0;
 }
 
 .header__nav {
-    margin: 21px 70px 0 0;
+    margin: 21px 0 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 1058px;
 }
 
