--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,10 +1,35 @@
 .moveCardList {
+    display: flex;
+    flex-direction: column;
     max-width: 1140px;
     width: 100%;
-    margin: 10px 70px 0;
+    margin: 10px 0 0;
+}
+
+.moveCardList__content {
     display: grid;
     grid-template-columns: repeat(4, 1fr) ;
-    column-gap: 32px;
-    row-gap: 20px;
+    column-gap: 20px;
+    row-gap: 32px;
+    margin: 70px 0 80px;
+}
 
+.moveCardList__button {
+    width: 1140px;
+    height: 36px;
+    border: none;
+    background: #2F2F2F;
+    border-radius: 6px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 0;
+    justify-content: center;
+    cursor: pointer;
+    margin: 0 0 160px;
 }
