--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,7 +3,7 @@
     max-width: 1140px;
     width: 100%;
     border-bottom: 1px solid #424242;
-    margin: 0 70px;
+    margin: 0 0 10px;
 }
 
 .search__form {
