--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -1,4 +1,8 @@
 .page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     max-width: 1280px;
     min-width: 320px;
