--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 
 @import url(./components/page/page.css);
 
+@import url(./components/App/App.css);
+
 @import url(./components/Header/Header.css);
 
 @import url(./components/Promo/Promo.css);
@@ -28,3 +30,5 @@
 @import url(./components/FilterCheckbox/FilterCheckbox.css);
 
 @import url(./components/MoviesCardList/MoviesCardList.css);
+
+@import url(./components/MoviesCard/MoviesCard.css);
