--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -51,19 +51,38 @@ margin: 14px 0 0;
 .movieCard__button {
     box-shadow: none;
     padding: 0;
-    margin: 0;
     cursor: pointer;
     outline: none;
-    background-repeat: no-repeat;
-    background: url("../../images/cardbutton.svg");
     width: 16px;
     height: 16px;
     border: none;
     margin: 14px 0 0;
-    cursor: pointer;
+    background-repeat: no-repeat;
+    background: url("../../images/cardbutton.svg");
 }
 
 .movieCard__button-active {
+    box-shadow: none;
+    padding: 0;
+    cursor: pointer;
+    outline: none;
+    width: 16px;
+    height: 16px;
+    border: none;
+    margin: 14px 0 0;
     background-repeat: no-repeat;
     background: url("../../images/cardbutton-active.svg");
+}
+
+.movieCard__button-delete {
+    box-shadow: none;
+    padding: 0;
+    cursor: pointer;
+    outline: none;
+    width: 16px;
+    height: 16px;
+    border: none;
+    margin: 14px 0 0;
+    background-repeat: no-repeat;
+    background: url("../../images/cardbotton-delete.svg");
 }
