--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@
 @import url(./components/MoviesCardList/MoviesCardList.css);
 
 @import url(./components/MoviesCard/MoviesCard.css);
+
+@import url(./components/Profile/Profile.css);
+
+@import url(./components/Navigation/Navigation.css);
