--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 
 @import url(./components/page/page.css);
 
+@import url(./components/root/root.css);
+
 @import url(./components/App/App.css);
+
+@import url(./components/error/error.css);
 
 @import url(./components/Header/Header.css);
 
@@ -36,3 +40,9 @@
 @import url(./components/Profile/Profile.css);
 
 @import url(./components/Navigation/Navigation.css);
+
+@import url(./components/Register/Register.css);
+
+@import url(./components/Login/Login.css);
+
+@import url(./components/NotFound/NotFound.css);
