--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,6 +1,7 @@
 .portfolio {
     color: #FFFFFF;
     display: flex;
+    padding: 0 70px;
 }
 
 .portfolio__content {
@@ -9,7 +10,7 @@
     max-width: 1140px;
     width: 100%;
     justify-content: center;
-    margin: 0 70px;
+    margin: 0;
     padding: 0;
 }
 
@@ -19,11 +20,11 @@
     font-size: 18px;
     line-height: 20px;
     color: #8B8B8B;
-    margin: 0 0 50px ;
+    margin: 0 0 30px ;
 }
 
 .portfolio__nav {
-    margin: 0 0 125px;
+    margin: 0 0 105px;
     list-style-type: none;
     padding: 0;
 }
@@ -37,15 +38,10 @@
 }
 
 .portfolio__link {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 50px;
-    letter-spacing: -0.04em;
-    color: #FFFFFF;
     text-decoration: none;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .portfolio__text {
@@ -59,3 +55,53 @@
     padding: 0;
 }
 
+.portfolio__img {
+    width: 29px;
+    height: 60px;
+}
+
+@media screen and (max-width: 768px) {
+    .portfolio {
+        padding: 0 50px;
+    }
+
+    .portfolio__nav {
+        margin: 0 0 70px;
+    }
+
+    .portfolio__text {
+        font-size: 28px;
+    }
+
+    .portfolio__img {
+        width: 27px;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .portfolio__header {
+        margin: 0 0 40px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .portfolio__nav {
+        margin: 0 0 50px;
+    }
+
+    .portfolio__text {
+        font-size: 18px;
+        line-height: 28px;
+    }
+
+    .portfolio__img {
+        width: 18px;
+        height: 28px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .portfolio {
+        padding: 0 14px;
+    }
+}
