--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,23 @@
 .footer {
+    max-width: 1280px;
+    width: 100%;
+}
+
+.footer__container {
     color: #FFFFFF;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 70px;
     max-width: 1140px;
-    width: 100%;
 }
 
 .footer__content {
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: center;
     margin: 0;
-    padding: 0;
+    padding: 79px 0 0;
 }
 
 .footer__header {
@@ -58,4 +64,57 @@
     font-size: 13px;
     line-height: 16px;
     margin: 20px 0 0;
+}
+
+@media screen and (max-width: 768px) {
+    .footer__container {
+        padding: 0 50px;
+    }
+
+    .footer__header {
+        margin: 0 0 20px;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .footer__container {
+        padding: 0 14px;
+    }
+
+    .footer__header {
+        margin: 0 0 21px;
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .footer__nav {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .footer__links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        margin: 30px 0 84px;
+    }
+
+    .footer__link {
+        text-align: center;
+        margin: 0 0 12px;
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .footer__link:last-of-type {
+        margin: 0;
+    }
+
+    .footer__copyright {
+        font-size: 12px;
+        line-height: 15px;
+        color: #8B8B8B;
+        margin: 0 0 10px;
+    }
 }
