--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -8,6 +8,7 @@
     background-image: url(../../images/mainlogo.svg);
     background-repeat: no-repeat;
     background-position: 50%;
+    padding: 0 18px;
 }
 
 .promo__title {
@@ -21,4 +22,27 @@
     max-width: 730px;
     margin: 0;
     padding: 0;
+    max-width: 730px;
+    width: 100%;
+}
+
+@media screen and (max-width: 768px){
+    .promo {
+        height: 784px;
+    }
+}
+
+
+@media screen and (max-width: 450px){
+    .promo {
+        height: 570px;
+        background-size: 248px;
+    }
+
+    .promo__title {
+        font-size: 31px;
+        line-height: 39px;
+        max-width: 300px;
+        width: 100%;
+    }
 }
