--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -2,6 +2,7 @@
     background: #272727;
     display: flex;
     color: #FFFFFF;
+    padding: 0 70px;
 }
 
 .techs__main {
@@ -10,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 70px;
+    margin: 0;
 }
 
 .techs__header {
@@ -31,15 +32,6 @@
     border-top: 1px solid #DADADA;
 }
 
-.techs__title {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 50px;
-    line-height: 58px;
-    letter-spacing: -0.04em;
-    margin: 90px auto 26px;
-}
-
 .techs__subtitle {
     font-style: normal;
     font-weight: normal;
@@ -53,8 +45,11 @@
 
 .techs__list {
     list-style-type: none;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    max-width: 690px;
+    width: 100%;
+    grid-column-gap: 10px;
     margin: 0;
     padding: 0;
 }
@@ -62,8 +57,7 @@
 .techs__item {
     background: #303030;
     border-radius: 10px;
-    margin: 0 10px 100px 0;
-    width: 90px;
+    margin: 0 0 100px;
     height: 60px;
     padding: 0;
     font-style: normal;
@@ -72,10 +66,73 @@
     line-height: 17px;
     text-align: center;
     letter-spacing: -0.04em;
-    border: none;
     color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.techs__item:last-of-type {
-    margin: 0 0 100px 0;
+
+@media screen and (max-width: 768px) {
+    .techs {
+        padding: 0 50px;
+    }
+
+    .techs__header {
+        margin: 90px 0 23px;
+    }
+
+    .techs__subtitle {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 auto 83px;
+    }
+
+    .techs__item {
+        height: 57px;
+        font-size: 12px;
+        line-height: 15px;
+        margin: 0 0 90px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .techs__list {
+        grid-template-columns: repeat(2, 84px);
+        justify-content: center;
+        grid-row-gap: 10px;
+    }
+
+    .techs__item {
+        font-size: 12px;
+        line-height: 15px;
+        margin: 0;
+    }
+    .techs__item:last-of-type {
+        margin: 0 0 70px;
+    }
+}
+
+@media screen and (max-width: 410px) {
+    .techs {
+        padding: 0 18px;
+    }
+
+    .techs__header {
+        margin: 70px 0 28px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .techs__content {
+        border-top: 1px solid #000000;
+    }
+
+    .techs__subtitle {
+        font-size: 11px;
+        line-height: 16px;
+        margin: 0 0 50px;
+        max-width: 292px;
+        width: 100%;
+    }
 }
