--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
 
 @import url(./components/Header/Header.css);
 
+@import url(./components/Main/Main.css);
+
 @import url(./components/Promo/Promo.css);
 
 @import url(./components/NavTab/NavTab.css);
@@ -22,6 +24,8 @@
 @import url(./components/AboutMe/AboutMe.css);
 
 @import url(./components/Portfolio/Portfolio.css);
+
+@import url(./components/Navigation/Navigation.css);
 
 @import url(./components/Footer/Footer.css);
 
