--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     height: 74px;
     width: 100%;
     justify-content: center;
+    align-items: center;
 }
 
 .header__movies {
@@ -20,9 +21,7 @@
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
-}
-
-.header__content-movies {
+    align-items: center;
     padding: 0 70px;
 }
 
@@ -33,18 +32,22 @@
 .header__logo {
     width: 38px;
     height: 38px;
-    margin: 18px 44px 0 0;
+    margin: 0 44px 0 0;
 }
+
+/*.header__logo-movies {*/
+/*    margin: 18px 44px 18px 0;*/
+/*}*/
 
 .header__logo-sign {
     margin: 70px 0 40px;
 }
 
 .header__nav {
-    margin: 21px 0 0;
+    margin: 0;
     display: flex;
     justify-content: flex-end;
-    width: 1058px;
+    width: 100%;
 }
 
 .header__nav__movies {
@@ -81,13 +84,16 @@
 }
 
 .header__nav-link {
-    margin: 8px 30px 0 0;
+    margin: 0 30px 0 0;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
     color: #FFFFFF;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header__nav-link-normal {
@@ -111,36 +117,21 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 1200px){
-    .header__logo {
-        margin: 18px 44px 18px 30px;
+@media screen and (max-width: 768px) {
+    .header__content {
+        padding: 0 30px;
     }
-
-    .header__nav {
-        margin: 18px 30px 0 0;
-    }
-
 }
 
-@media screen and (max-width: 788px) {
-    .header__nav__movies {
-        display: none;
-    }
-
-}
 
 @media screen and (max-width: 480px){
-    .header__logo {
-        margin: 18px 44px 18px 14px;
-    }
-
-    .header__nav {
-        margin: 24px 14px 24px 0;
+    .header__content {
+        padding: 0 14px;
     }
 
     .header__nav-link {
         font-size: 10px;
-        margin: 6px 14px 0 0;
+        margin: 0 14px 0 0;
     }
 
     .header__button {
