--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    max-width: 1140px;
+    width: 100%;
+    align-items: center;
 }
