--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,21 +1,30 @@
 .moveCardList {
     display: flex;
-    flex-direction: column;
-    max-width: 1140px;
-    width: 100%;
+    /*width: 100%;*/
     margin: 10px 0 0;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.moveCardList__container {
+    padding: 0 70px;
 }
 
 .moveCardList__content {
     display: grid;
     grid-template-columns: repeat(4, 1fr) ;
-    column-gap: 20px;
-    row-gap: 32px;
+    grid-auto-rows: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 32px;
     margin: 70px 0 80px;
+    /*max-width: 1140px;*/
+    /*width: 100%;*/
 }
 
 .moveCardList__button {
-    width: 1140px;
+    max-width: 1140px;
+    width: 100%;
     height: 36px;
     border: none;
     background: #2F2F2F;
