--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,22 +1,27 @@
 .search {
     display: flex;
-    max-width: 1140px;
     width: 100%;
-    /*border-bottom: 1px solid #424242;*/
     margin: 0 0 10px;
     justify-content: center;
+}
+
+.search__content {
+    display: flex;
+    max-width: 1280px;
     padding: 0 70px;
+    width: 100%;
 }
 
 .search__form {
     background: #2F2F2F;
-    border-radius: 9px;
+    border-radius: 9px 0 0 9px;
     display: flex;
     width: 100%;
     margin: 70px 0 80px;
     justify-content: space-between;
     justify-content: space-between;
     max-width: 1140px;
+    align-items: center;
 
 }
 
@@ -25,7 +30,8 @@
     background-repeat: no-repeat;
     width: 34px;
     height: 34px;
-    margin: 19px 10px 19px 19px;
+    margin: 0 0 0 19px;
+    padding-left: 34px;
 }
 
 .search__container {
@@ -33,6 +39,8 @@
     justify-content: space-between;
     width: 100%;
     max-width: 850px;
+    height: 72px;
+    align-items: center;
 }
 
 .search__input {
@@ -45,12 +53,13 @@
     line-height: 20px;
     color: #8B8B8B;
     width: 100%;
+    height: 100%;
 }
 
 .search__button {
     width: 80px;
     height: 34px;
-    margin: 19px 30px 19px 0;
+    margin: 0 30px 0 0;
     background: #4285F4;
     border-radius: 48px;
     border: none;
@@ -61,8 +70,52 @@
     text-align: center;
     color: #FFFFFF;
     padding: 0;
+    border-right: 1px solid #424242;
 }
 
 .search__button:hover {
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .search__content {
+        padding: 0 30px;
+    }
+
+    .search__button {
+        margin: 0 19px 0 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .search__content {
+        padding: 0 30px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search__form {
+        margin: 70px 0 0;
+        border-radius: 9px;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .search__content {
+        padding: 0 10px;
+    }
+
+    .search__form {
+        flex-direction: column;
+    }
+
+    .search__image {
+        display: none;
+    }
+
+    .search__container {
+        margin: 0 0 0 19px;
+        height: 72px;
+    }
 }
