--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -38,3 +38,13 @@
     text-decoration: none;
     margin: 0 0 0 6px;
 }
+
+@media screen and (max-width: 320px) {
+    .login__button {
+        margin: 267px 0 0;
+    }
+
+    .login__subtitle {
+        margin: 14px 0 30px;
+    }
+}
