--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,7 +1,6 @@
 .movieCard {
     display: flex;
     flex-direction: column;
-    max-height: 218px;
     height: 100%;
     border-radius: 10px;
     background: #222222;
@@ -9,7 +8,7 @@
 }
 
 .movieCard__image {
-    max-height: 151px;
+    width: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -20,12 +19,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 246px;
+    /*max-width: 246px;*/
     width: 100%;
 }
 
 .movieCard__text {
-margin: 14px 0 0;
+margin: 14px 0 10px 12px;
 }
 
 .movieCard__title {
@@ -56,7 +55,7 @@ margin: 14px 0 0;
     width: 16px;
     height: 16px;
     border: none;
-    margin: 14px 0 0;
+    margin: 14px 12px 0 0;
     background-repeat: no-repeat;
     background: url("../../images/cardbutton.svg");
 }
@@ -85,4 +84,9 @@ margin: 14px 0 0;
     margin: 14px 0 0;
     background-repeat: no-repeat;
     background: url("../../images/cardbotton-delete.svg");
+}
+
+
+@media screen and (max-width: 900px) {
+
 }
