--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -40,3 +40,32 @@
     color: #4285F4;
     text-decoration: none;
 }
+
+@media screen and (max-width: 768px) {
+    .notFound {
+        padding: 408px 0 222px;
+        max-height: 1024px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .notFound {
+        padding: 329px 0 30px;
+        max-height: 780px;
+    }
+
+    .notFound__title {
+        font-size: 80px;
+        line-height: 97px;
+    }
+
+    .notFound__subtitle {
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .notFound__link {
+        font-size: 12px;
+        line-height: 15px;
+    }
+}
