--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,7 +42,7 @@
 .header__nav {
     margin: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 100%;
 }
 
