--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /*max-width: 246px;*/
+    align-items: flex-start;
     width: 100%;
 }
 
@@ -49,7 +49,7 @@ margin: 14px 0 10px 12px;
 
 .movieCard__button {
     box-shadow: none;
-    padding: 0;
+    /*padding: 0;*/
     cursor: pointer;
     outline: none;
     width: 16px;
@@ -57,19 +57,23 @@ margin: 14px 0 10px 12px;
     border: none;
     margin: 14px 12px 0 0;
     background-repeat: no-repeat;
+    background-position: center;
     background: url("../../images/cardbutton.svg");
 }
 
 .movieCard__button-active {
     box-shadow: none;
-    padding: 0;
+    padding-left: 16px;
+    padding-bottom: 15px;
+    padding-top: 16px;
     cursor: pointer;
     outline: none;
     width: 16px;
     height: 16px;
     border: none;
-    margin: 14px 0 0;
+    margin: 14px 12px 0 0;
     background-repeat: no-repeat;
+    background-position: center;
     background: url("../../images/cardbutton-active.svg");
 }
 
@@ -81,8 +85,9 @@ margin: 14px 0 10px 12px;
     width: 16px;
     height: 16px;
     border: none;
-    margin: 14px 0 0;
+    margin: 14px 12px 0 0;
     background-repeat: no-repeat;
+    background-position: center;
     background: url("../../images/cardbotton-delete.svg");
 }
 
