--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -53,6 +53,11 @@
     color: #8B8B8B;
     width: 100%;
     height: 100%;
+    margin: 0 10px 0 0;
+}
+
+.search__input:focus {
+    border-bottom: 1px solid #4285F4;
 }
 
 .search__button {
