--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,12 +5,19 @@
     border-radius: 10px;
     background: #222222;
     align-items: center;
+    max-height: 218px;
+}
+
+.movieCard__container {
+    height: 100%;
 }
 
 .movieCard__image {
     width: 100%;
     object-fit: cover;
     object-position: center;
+    height: 100%;
+    max-height: 151px;
 }
 
 .movieCard__items {
@@ -24,7 +31,11 @@
 }
 
 .movieCard__text {
-margin: 14px 0 10px 12px;
+    justify-content: space-between;
+    margin: 14px 0 10px 12px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .movieCard__title {
