--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -62,6 +62,13 @@
     height: 14px;
     max-width: 360px;
     width: 100%;
+    text-align: end;
+}
+.profile__input::-webkit-input-placeholder {
+    color: #ffffff;
+}
+.profile__input::-moz-placeholder {
+    color: #ffffff;
 }
 
 .profile__label {
