--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -39,13 +39,20 @@
 }
 
 .movieCard__title {
+    max-width: 206px;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
     color: #FFFFFF;
     margin: 0 0 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
+
 
 .movieCard__duration {
     font-style: normal;
