--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,8 @@
 
 @import url(./components/Movies/Movies.css);
 
+@import url(./components/SavedMovies/SavedMovies..css);
+
 @import url(./components/SearchForm/SearchForm.css);
 
 @import url(./components/Preloader/Preloader.css);
